---
source: spade-tests/src/hir_lowering.rs
---
fn x(a: int<8>) -> int<8> {
    5 % 3
}

error: Modulo can only be performed on powers of two
  ┌─ testinput:2:9
  │
2 │     5 % 3
  │         ^ Modulo by non-power-of-two value
  │
  = help: Non-power-of-two modulo is generally slow and should usually be done over multiple cycles.
  = If you are sure you want to divide by 3, use `std::ops::comb_mod`
  │
2 │     5 `std::ops::comb_mod` 3
  │       ~~~~~~~~~~~~~~~~~~~~
